<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dp"
	    android:text="@string/tv1" />
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="5dp"
	    android:layout_marginTop="5dp"
	    android:gravity="center" >
	
	    <ToggleButton
	        android:id="@+id/toggleButton1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/tb1" />
	
	    <ToggleButton
	        android:id="@+id/toggleButton2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/tb2" />
	
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/b1" />
	
	    <Button
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/b2" />
	</LinearLayout>

	<SeekBar
	    android:id="@+id/seekBar1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:max="@integer/seekbar_max"
	    android:progress="@integer/seekbar_progress" />
	
	<SurfaceView
	    android:id="@+id/surfaceView1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" />

</LinearLayout>
